@@ -1,21 +1,15 @@
 package com.oracle.svm.hosted.image;
 
-import java.io.PrintStream;
 import java.io.PrintWriter;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.IdentityHashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
-import java.util.function.Function;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import com.oracle.svm.core.util.ConcurrentIdentityHashMap;
-import jdk.vm.ci.meta.ResolvedJavaField;
 import org.graalvm.collections.Pair;
 import org.graalvm.compiler.core.phases.StaticFieldsAccessGatherPhase;
 
@@ -23,204 +17,187 @@ import com.oracle.svm.core.image.ImageHeapPartition;
 import com.oracle.svm.hosted.image.NativeImageHeap.ObjectInfo;
 import com.oracle.svm.hosted.meta.HostedField;
 
-import jdk.vm.ci.meta.JavaMethod;
-
 public class NativeImageHeapGraph {
-    private final DirectedGraph<ObjectInfo> graph = new DirectedGraph<>();
     private final StaticFieldsAccessGatherPhase.StaticFieldsAccessRecords accessRecords;
-    private final Set<HostedField> hostedFields;
+    private final Set<HostedField> hostedFieldsReasons;
+    private final Set<String> stringReasons;
     private final NativeImageHeap heap;
-    private long totalHeapSize = 0;
+    private final long totalHeapSizeInBytes;
+    private final List<ConnectedComponentInfo> connectedComponents;
 
-    private IdentityHashMap<JavaMethod, Set<Object>> objectAccesses = new IdentityHashMap<>();
-
-    public NativeImageHeapGraph(StaticFieldsAccessGatherPhase.StaticFieldsAccessRecords accessRecords, NativeImageHeap heap) {
+    public NativeImageHeapGraph(StaticFieldsAccessGatherPhase.StaticFieldsAccessRecords accessRecords, NativeImageHeap heap, long imageHeapSize) {
         this.heap = heap;
         this.accessRecords = accessRecords;
-        this.totalHeapSize = this.heap.getObjects().stream().map(ObjectInfo::getSize).reduce(Long::sum).get();
-        this.hostedFields = Collections.newSetFromMap(new IdentityHashMap<>());
+        this.totalHeapSizeInBytes = imageHeapSize;
+        this.hostedFieldsReasons = Collections.newSetFromMap(new IdentityHashMap<>());
+        this.stringReasons = Collections.newSetFromMap(new IdentityHashMap<>());
+        DirectedGraph<ObjectInfo> graph = computeImageHeapObjectGraph(this.heap);
+        this.connectedComponents = computeConnectedComponents(graph, this.heap);
+    }
+
+    private DirectedGraph<ObjectInfo> computeImageHeapObjectGraph(NativeImageHeap heap) {
+        DirectedGraph<ObjectInfo> graph = new DirectedGraph<>();
         for (ObjectInfo objectInfo : heap.getObjects()) {
-            connectChildToParentObjects(objectInfo);
+            connectChildToParentObjects(graph, objectInfo);
         }
+        return graph;
     }
 
-    private void recordAccess(JavaMethod method, Object heapObject) {
-        objectAccesses.computeIfAbsent(method, m -> Collections.newSetFromMap(new IdentityHashMap<>())).add(heapObject);
-    }
-
-    private static List<ObjectInfo> getAllReferencesToObjectInHeap(ObjectInfo objectInfo) {
-        return objectInfo.getReasons().stream()
-                        .filter(r -> r instanceof ObjectInfo)
-                        .map(r -> (ObjectInfo) r)
-                        .collect(Collectors.toList());
-    }
-
-    private void connectChildToParentObjects(ObjectInfo childObjectInfo) {
-        for (Object reason : childObjectInfo.getReasons()) {
+    private void connectChildToParentObjects(DirectedGraph<ObjectInfo> graph, ObjectInfo childObjectInfo) {
+        for (Object reason : childObjectInfo.getAllReasons()) {
             if (reason instanceof ObjectInfo) {
                 ObjectInfo parent = (ObjectInfo) reason;
                 graph.connect(parent, childObjectInfo);
             } else if (reason instanceof String) {
-
+                this.stringReasons.add((String) reason);
             } else if (reason instanceof HostedField) {
-                this.hostedFields.add((HostedField) reason);
+                this.hostedFieldsReasons.add((HostedField) reason);
             }
         }
     }
 
-    private Long computeComponentSize(List<ObjectInfo> objects) {
-        long totalSize = 0L;
-        for (ObjectInfo o : objects) {
-            totalSize += o.getSize();
-        }
-        return totalSize;
+    private static List<ConnectedComponentInfo> computeConnectedComponents(DirectedGraph<ObjectInfo> graph, NativeImageHeap heap) {
+        List<String> reasonFilterPatterns = Arrays.stream(
+                NativeImageHeapGraphFeature.Options.NativeImageHeapGraphReasonFilterOut.getValue().split(","))
+                .map(String::strip)
+                .collect(Collectors.toList());
+
+        List<String> objectFilterPatterns = Arrays.stream(
+                NativeImageHeapGraphFeature.Options.NativeImageHeapGraphObjectFilterOut
+                        .getValue()
+                        .split(",")
+                )
+                .map(String::strip)
+                .collect(Collectors.toList());
+        // Compute connected components by running dfs visit from all the root nodes
+        int limitNumOfComponents = NativeImageHeapGraphFeature.Options.NativeImageHeapGraphNumOfComponents.getValue();
+        limitNumOfComponents = limitNumOfComponents > 0 ? Math.min(limitNumOfComponents, graph.getRoots().size()) : graph.getRoots().size();
+        return graph.getRoots().stream()
+                .parallel()
+                .map(root -> DirectedGraph.DFSVisitor.create(graph).dfs(root))
+                .map(root -> new ConnectedComponentInfo(root, heap))
+                .filter(c -> c.getSizeInMB() >= NativeImageHeapGraphFeature.Options.NativeImageHeapGraphComponentMBSizeThreshold.getValue())
+                .filter(c -> c.shouldReportThisComponent(objectFilterPatterns, reasonFilterPatterns))
+                .sorted(Comparator.comparing(ConnectedComponentInfo::getSizeInBytes).reversed())
+                .limit(limitNumOfComponents)
+                .collect(Collectors.toList());
     }
 
-    private void dumpComponent(PrintStream out, ArrayList<ObjectInfo> objects) {
-        System.out.println("ObjectClass(Size)");
-        for (ObjectInfo object : objects) {
-            out.printf("%s(%d)\n", object.getClazz(), object.getSize());
-            object.getReasons().forEach(o -> out.printf("\t%s\n", o));
+    public void printComponentsReport(PrintWriter out) {
+        out.println("============Native Image Heap Object Graph Stats============");
+        out.printf("Total Heap Size: %.3fMB\n", MB(this.totalHeapSizeInBytes));
+        out.printf("Total number of objects in the heap: %d\n", this.heap.getObjects().size());
+        out.println();
+        out.println("===========Connected components in NativeImageHeap===========");
+        out.println("ObjectName | SizeMB | FractionOfTotalHeapSize | IdentityHashCode");
+        for (ConnectedComponentInfo connectedComponent : connectedComponents) {
+            float sizeInMb = connectedComponent.getSizeInMB();
+            ObjectInfo rootObject = connectedComponent.getRoot();
+            float componentFractionSizeOfTotalHeap = (float) connectedComponent.getSizeInBytes() / this.totalHeapSizeInBytes;
+            out.printf("%s | %.4fMB | %.4f | %d\n", rootObject.getObjectClass().getName(),
+                    sizeInMb, componentFractionSizeOfTotalHeap, rootObject.getIdentityHashCode());
+            for (Object reason : rootObject.getAllReasons()) {
+                if (reason instanceof String) {
+                    out.printf("|--%s\n", reason);
+                }
+            }
+            out.println();
         }
     }
 
+    public void printComponentsImagePartitionHistogramReport(PrintWriter out) {
+        out.println("==========ImagePartitionStatistics per component=============");
+        out.println("CSp - Component size in Partition");
+        out.println("PS - Partition size");
+        out.println("F - Total space taken by component inside a partition");
+        for (ConnectedComponentInfo connectedComponentInfo : connectedComponents) {
+            out.printf("\n=========Object: %s - | %fMB | IdentityHashCode: %d=========\n",
+                    connectedComponentInfo.getRoot().getObjectClass(),
+                    connectedComponentInfo.getSizeInMB(),
+                    connectedComponentInfo.getRoot().getIdentityHashCode());
+            out.printf("%-20s %-26s\n", "Partition", "CSp/PS=F");
+            for (Pair<ImageHeapPartition, Long> partitionInfo : connectedComponentInfo.getHistogram()) {
+                ImageHeapPartition partition = partitionInfo.getLeft();
+                long componentSizeInPartition = partitionInfo.getRight();
+                out.printf("%-20s %.4fMB/%.4fMB=%.4f\n",
+                        partition,
+                        MB(componentSizeInPartition),
+                        MB(partition.getSize()),
+                        (double) componentSizeInPartition / partition.getSize());
+            }
+        }
+    }
     private static float MB(long bytes) {
         return bytes / (1048576f);
     }
 
-    public static <T> Predicate<T> distinctByKey(Function<? super T, Object> keyExtractor) {
-        Map<Object, Boolean> map = new ConcurrentIdentityHashMap<>();
-        return t -> map.putIfAbsent(keyExtractor.apply(t), Boolean.TRUE) == null;
-    }
-
-    public void printStatistics(PrintWriter out) {
-        out.println("============Native Image Heap Object Graph Stats============");
-
-        out.printf("Total Heap Size: %.3fMB\n", MB(this.totalHeapSize));
-        out.printf("Total number of objects in the heap: %d\n", this.heap.getObjects().size());
-
-        int numOfComponents = NativeImageHeapGraphFeature.Options.NativeImageHeapGraphNumOfComponents.getValue();
-
-        List<String> reasonFilterPatterns = Arrays.stream(NativeImageHeapGraphFeature.Options.NativeImageHeapGraphReasonFilterOut
-                        .getValue()
-                        .split(","))
-                        .map(String::strip)
-                        .collect(Collectors.toList());
-        Predicate<String> reasonFilterOut = (c) -> reasonFilterPatterns.stream().noneMatch(c::contains);
-
-        List<String> objectFilterPatterns = Arrays.stream(NativeImageHeapGraphFeature.Options.NativeImageHeapGraphObjectFilterOut
-                        .getValue()
-                        .split(","))
-                        .map(String::strip)
-                        .collect(Collectors.toList());
-        Predicate<String> objectFilterOut = (c) -> objectFilterPatterns.stream().noneMatch(c::contains);
-        // Compute connected components by running dfs visit from all the root nodes
-        List<List<ObjectInfo>> components = graph.getRoots().stream().parallel()
-                        .filter(distinctByKey(ObjectInfo::getMainReason))
-                        .filter(o -> reasonFilterOut.test(o.getMainReason().toString()))
-                        .map(root -> DirectedGraph.DFSVisitor.create(this.graph).dfs(root))
-                        .filter(c -> objectFilterOut.test(c.get(0).toString()))
-                        .collect(Collectors.toList());
-
-        numOfComponents = numOfComponents > 0 ? Math.min(numOfComponents, components.size()) : components.size();
-        // Compute each component size in bytes
-        List<Long> componentsSizes = components.stream()
-                        .map(this::computeComponentSize)
-                        .collect(Collectors.toList());
-
-        // Sort connected components by size
-        List<Pair<Long, List<ObjectInfo>>> sortedComponents = IntStream.range(0, components.size())
-                        .mapToObj(i -> Pair.create(componentsSizes.get(i), components.get(i)))
-                        .sorted((a, b) -> b.getLeft().compareTo(a.getLeft()))
-                        .collect(Collectors.toList());
-
-        // Compute components size percentage relative to the total heap size
-        List<Double> componentsSizesFraction = sortedComponents.stream()
-                        .limit(numOfComponents)
-                        .map(o -> o.getLeft().doubleValue() / this.totalHeapSize)
-                        .collect(Collectors.toList());
-
-        out.println();
-        out.println("===========Connected components in NativeImageHeap===========");
-        String format = "%-10s %-12s %s -> %s\n";
-        out.printf(format,
-                        "Size", "HeapFraction", "Reason", "RootObjectType");
-
-
-        IntStream.range(0, numOfComponents)
-                        .mapToObj(i -> String.format(format,
-                                        String.format("%.4fMB", MB(sortedComponents.get(i).getLeft())),
-                                        String.format("%.4f", componentsSizesFraction.get(i)),
-                                        formatReason(sortedComponents.get(i).getRight().get(0).getMainReason()),
-                                        sortedComponents.get(i).getRight().get(0).getObjectClass().getName()))
-                        .forEach(out::print);
-
-        ComponentImagePartitionInfo.printHistogramDescription(out);
-
-        sortedComponents.stream()
-                        .limit(numOfComponents)
-                        .forEach(pair -> new ComponentImagePartitionInfo(this, pair.getRight())
-                                        .printHistogram(out));
-
-    }
-
-    private String formatReason(Object reason) {
-        if (reason == null) {
-            return "";
-        }
-        if (reason instanceof HostedField) {
-//            return this.accessRecords.getMethodsForField((HostedField)reason).stream()
-//                    .map(JavaMethod::getName).collect(Collectors.toList()).toString();
-            return ((HostedField)reason).getName();
-        }
-        return reason.toString();
-    }
-
-    private static class ComponentImagePartitionInfo {
+    private static class ConnectedComponentInfo {
+        private final List<ObjectInfo> objects;
+        private final long size;
         private final List<ImageHeapPartition> partitions;
         private final long[] componentSizeInPartition;
-        private final List<ObjectInfo> component;
-        private final NativeImageHeapGraph graph;
 
-        public ComponentImagePartitionInfo(NativeImageHeapGraph graph, List<ObjectInfo> component) {
-            this.graph = graph;
-            this.partitions = List.of(graph.heap.getLayouter().getPartitions());
+        public ConnectedComponentInfo(List<ObjectInfo> objects, NativeImageHeap heap) {
+            this.objects = objects;
+            this.size = computeComponentSize(objects);
+            this.partitions = Arrays.asList(heap.getLayouter().getPartitions());
             this.componentSizeInPartition = new long[partitions.size()];
-            this.component = component;
-            for (ObjectInfo object : component) {
+            for (ObjectInfo object : objects) {
                 ImageHeapPartition partition = object.getPartition();
                 int index = this.partitions.indexOf(partition);
                 componentSizeInPartition[index] += object.getSize();
             }
         }
 
-        public static void printHistogramDescription(PrintWriter out) {
-            out.println();
-            out.println("==========ImagePartitionStatistics per component=============");
-            out.println("CSp - Component size in Partition");
-            out.println("PS - Partition size");
-            out.println("F - Total space taken by component inside a partition");
+        private static long computeComponentSize(List<ObjectInfo> objects) {
+            long totalSize = 0L;
+            for (ObjectInfo o : objects) {
+                totalSize += o.getSize();
+            }
+            return totalSize;
         }
 
+        public long getSizeInBytes() {
+            return size;
+        }
+
+        public float getSizeInMB() {
+            return size / (1024.f * 1024.f);
+        }
+
+        public List<ObjectInfo> getObjects() {
+            return objects;
+        }
+
+        public ObjectInfo getRoot() {
+            return objects.get(0);
+        }
+
+        public boolean shouldReportThisComponent(List<String> objectFilterOutPatterns,
+                                                 List<String> reasonFilterOutPatterns) {
+            for (String filterOutPattern : objectFilterOutPatterns) {
+                boolean shouldExcludeThisComponentFromReport =
+                        getRoot().toString().contains(filterOutPattern);
+                if (shouldExcludeThisComponentFromReport) {
+                    return false;
+                }
+            }
+            for (String filterOutPattern : reasonFilterOutPatterns) {
+                boolean shouldExcludeThisComponentFromReport = getRoot().getAllReasons()
+                        .stream()
+                        .filter(r -> r instanceof String)
+                        .map(Object::toString)
+                        .anyMatch(r -> r.contains(filterOutPattern));
+                if (shouldExcludeThisComponentFromReport) {
+                    return false;
+                }
+            }
+            return true;
+        }
         public List<Pair<ImageHeapPartition, Long>> getHistogram() {
             return IntStream.range(0, partitions.size())
-                            .mapToObj(i -> Pair.create(partitions.get(i), componentSizeInPartition[i]))
-                            .collect(Collectors.toList());
-        }
-
-        public void printHistogram(PrintWriter out) {
-            List<Pair<ImageHeapPartition, Long>> histogram = getHistogram();
-            out.printf("\n=========Reason: %s=========\n", this.graph.formatReason(this.component.get(0).getMainReason()));
-            out.printf("%-20s %-26s\n", "Partition", "CSp/PS=F");
-            for (Pair<ImageHeapPartition, Long> partitionInfo : histogram) {
-                ImageHeapPartition partition = partitionInfo.getLeft();
-                long componentSizeInPartition = partitionInfo.getRight();
-                out.printf("%-20s %.4fMB/%.4fMB=%.4f\n",
-                                partition,
-                                MB(componentSizeInPartition),
-                                MB(partition.getSize()),
-                                (double) componentSizeInPartition / partition.getSize());
-            }
+                    .mapToObj(i -> Pair.create(partitions.get(i), componentSizeInPartition[i]))
+                    .collect(Collectors.toList());
         }
     }
 }
